# SGG-LLM-Agent-Quick

./: .gitignore
data-agent/: .gitignore  README.md  main.py  pyproject.toml
data-agent/app/agent/: context.py  graph.py  state.py
data-agent/app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
data-agent/app/api/: lifespan.py
data-agent/app/api/routers/: query_router.py
data-agent/app/api/schemas/: query_schema.py
data-agent/app/clients/: embedding_client_manager.py  es_client_manager.py  llm.py  mysql_client_manager.py  qdrant_client_manager.py
data-agent/app/conf/: app_config.py
data-agent/app/core/: context.py  log.py
data-agent/app/entities/: column_info.py  column_metric.py  metric_info.py  table_info.py
data-agent/app/prompt/: prompt_loader.py
data-agent/app/repositories/es/: value_es_repository.py
data-agent/app/repositories/mysql/dw/: dw_mysql_repository.py
data-agent/app/repositories/mysql/meta/: meta_mysql_repository.py
data-agent/app/repositories/mysql/meta/mappers/: column_info_mapper.py  metric_info_mapper.py  (+2 more)
data-agent/app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
data-agent/app/scripts/: build_meta_knowledge.py
data-agent/app/services/: meta_knowledge_service.py  query_service.py
data-agent/conf/: app_config.yaml
data-agent/prompts/: filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt
(+110 files in other folders)
