[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=46.0.6",
    "elasticsearch[async]>=8,<9",
    "langchain-huggingface>=1.2.1",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
]
